haproxy support redirect, page_restriction and reverse proxy

--- a/templates/haproxy/haproxy.cfg.erb
+++ b/templates/haproxy/haproxy.cfg.erb
@@ -45,7 +45,34 @@ frontend http-in
 
 frontend https-in
     bind *:443 ssl crt /etc/haproxy/ssl/<%= @cert %>.pem
-    reqadd X-Forwarded-Proto:\ https
+    reqadd X-Forwarded-Proto:\ https  
+
+    <% if !(node[:haproxy][:redirects].nil? || node[:haproxy][:redirects].empty?)  -%>
+    <% node[:haproxy][:redirects].each do |key, value| %>
+    http-request redirect scheme https drop-query append-slash if { path -m str /<%= key %> }
+    acl redirect_<%= key %> path_beg /<%= key %>/
+    http-request redirect location /<%= value %>/ if redirect_<%= key %>
+    <% end %>
+    <% end %>
+
+    <% restricted_list = "" %>
+    <% if !(node[:haproxy][:restricted_page].nil? || node[:haproxy][:restricted_page].empty?)  -%>
+    <% node[:haproxy][:restricted_page].each do |key, value| %>
+    acl restricted_page_<%= key %> path_beg -i <%= value %>
+    <% restricted_list += "restricted_page_" + key + " "  %>
+    <% end %>
+    <% end %>
+    acl restricted_default_html path_beg,url_dec -i /default.html
+    http-request deny if restricted_default_html <%= restricted_list %>
+    http-request add-header X-CLIENT-IP %[src]
+
+    <% if !(node[:haproxy][:reverse_proxy].nil? || node[:haproxy][:reverse_proxy].empty?)  -%>
+    <% node[:haproxy][:reverse_proxy].each do |key, value| %>
+    acl prefixed-with-<%= key %>  path_beg /<%= value['slug'] %>/
+    use_backend <%= key %> if prefixed-with-<%= key %>
+    <% end %>
+    <% end %>
+
     default_backend application-backend
 
 backend application-backend
@@ -67,3 +94,19 @@ backend application-backend
     <% end -%>
     #enter the IP of your application here
     server node1 <%= @backend_host %>:<%= @backend_port %> cookie A check
+
+<% if !(node[:haproxy][:reverse_proxy].nil? || node[:haproxy][:reverse_proxy].empty?)  -%>
+<% node[:haproxy][:reverse_proxy].each do |key, value| %>
+backend <%= key %>
+    http-request set-header Host <%= value['host'] %>
+    server node1 <%= value['host'] %>:80
+    # Map url path as ProxyPass does
+    reqirep  ^(GET|POST|HEAD)\ /<%= value['slug'] %>/(.*)     \1\ /\2
+    # Rewrite redirects as ProxyPassReverse does
+    acl response-is-redirect res.hdr(Location) -m found
+    rspirep ^Location:\ (http|https)://<%= value['host'] %>\/(.*)   Location:\ \1://<%= node[:haproxy][:doamin] %>/<%= value['slug'] %>/\2  if response-is-redirect
+    #option forwardfor  
+<% end %>
+<% end %>
+
+  
