append-slash for the reverse proxy slugs

--- a/templates/haproxy/haproxy.cfg.erb
+++ b/templates/haproxy/haproxy.cfg.erb
@@ -49,7 +49,6 @@ frontend https-in
 
     <% if !(node[:haproxy][:redirects].nil? || node[:haproxy][:redirects].empty?)  -%>
     <% node[:haproxy][:redirects].each do |key, value| %>
-    http-request redirect scheme https drop-query append-slash if { path -m str /<%= key %> }
     acl redirect_<%= key %> path_beg /<%= key %>/
     http-request redirect location /<%= value %>/ if redirect_<%= key %>
     <% end %>
@@ -68,6 +67,7 @@ frontend https-in
 
     <% if !(node[:haproxy][:reverse_proxy].nil? || node[:haproxy][:reverse_proxy].empty?)  -%>
     <% node[:haproxy][:reverse_proxy].each do |key, value| %>
+    http-request redirect scheme https drop-query append-slash if { path -m str /<%= value['slug'] %> }
     acl prefixed-with-<%= key %>  path_beg /<%= value['slug'] %>/
     use_backend <%= key %> if prefixed-with-<%= key %>
     <% end %>
