--- a/templates/haproxy/haproxy.cfg.erb
+++ b/templates/haproxy/haproxy.cfg.erb
@@ -93,8 +93,8 @@ backend application-backend
     http-request auth if restricted_page
     <% end -%>
     #enter the IP of your application here
-    mode http 
-    option httpchk HEAD /<%= node[:haproxy][:heath_check] %> HTTP/1.1\r\nHost:\ <%= node[:haproxy][:hostname] %>
+    option httpchk GET /<%= node[:haproxy][:heath_check] %>
+    default-server inter <%= node[:haproxy][:inter] %> fall <%= node[:haproxy][:fall] %>
     server node1 <%= @backend_host %>:<%= @backend_port %> cookie A check
 
 <% if !(node[:haproxy][:reverse_proxy].nil? || node[:haproxy][:reverse_proxy].empty?)  -%>
@@ -103,7 +103,9 @@ backend <%= key %>
     http-request set-header Host <%= value['host'] %>
     server node1 <%= value['host'] %>:80
     # Map url path as ProxyPass does
+    <% if (value['path'].nil?)  -%>
     reqirep  ^(GET|POST|HEAD)\ /<%= value['slug'] %>/(.*)     \1\ /\2
+    <% end -%>
     # Rewrite redirects as ProxyPassReverse does
     acl response-is-redirect res.hdr(Location) -m found
     rspirep ^Location:\ (http|https)://<%= value['host'] %><%= value['path'] %>\/(.*)   Location:\ \1://<%= node[:haproxy][:hostname] %>/<%= value['slug'] %>/\2  if response-is-redirect
