--- a/templates/haproxy/haproxy.cfg.erb
+++ b/templates/haproxy/haproxy.cfg.erb
@@ -104,7 +104,11 @@ backend <%= key %>
     <% end -%>
     # Rewrite redirects as ProxyPassReverse does
     acl response-is-redirect res.hdr(Location) -m found
-    rspirep ^Location:\ (http|https)://<%= value['host'] %><%= value['path'] %>\/(.*)   Location:\ \1://<%= node[:haproxy][:hostname] %>/<%= value['slug'] %>/\2  if response-is-redirect
+    <% if (value['force_slash'])  -%>
+        rspirep ^Location:\ (http|https)://<%= value['host'] %><%= value['path'] %>\/(.*)   Location:\ \1://<%= node[:haproxy][:hostname] %>/<%= value['slug'] %>/\2  if response-is-redirect
+    <% else  -%>
+        rspirep ^Location:\ (http|https)://<%= value['host'] %><%= value['path'] %>\/(.*)   Location:\ \1://<%= node[:haproxy][:hostname] %>/<%= value['slug'] %>\2  if response-is-redirect
+    <% end -%>
     #option forwardfor  
 <% end %>
 <% end %>
