--- a/templates/haproxy/haproxy.cfg.erb
+++ b/templates/haproxy/haproxy.cfg.erb
@@ -108,7 +108,7 @@ backend application-backend
 <% if !(node[:haproxy][:reverse_proxy].nil? || node[:haproxy][:reverse_proxy].empty?)  -%>
 <% node[:haproxy][:reverse_proxy].each do |key, value| %>
 backend <%= key %>
-    <% if node[:haproxy][:protection] == 'all' -%>
+    <% if value[:require_auth] -%>
     acl auth_ok http_auth(UsersFor_WP)
     http-request auth if !auth_ok
     <% end -%>
