--- a/templates/varnish-default.vcl.erb
+++ b/templates/varnish-default.vcl.erb
@@ -102,7 +102,7 @@ sub vcl_recv {
 
 	
   # pass wp-admin cookies
-  if (req.http.cookie) Ż
+  if (req.http.cookie)
     if (req.http.cookie ~ "(wordpress_|wp-settings-|wsc_session)") {
         return(pass);
     } else {
