--- a/templates/varnish-default.vcl.erb
+++ b/templates/varnish-default.vcl.erb
@@ -95,7 +95,7 @@ sub vcl_recv {
     return (pass);
   }
 
-  if ( req.method == "POST" || req.url ~ "api/" )
+  if ( req.method == "POST" && req.url ~ "api/" )
   {           
     return (pass);
   }
