Apache virtualhost, multi port

--- a/templates/apache-ports.erb
+++ b/templates/apache-ports.erb
@@ -2,14 +2,6 @@
 # have to change the VirtualHost statement in
 # /etc/apache2/sites-enabled/000-default.conf
 
-Listen <%= @port %>
-
-<% if (node[:apache][:ssl_enabled]) -%>
-<IfModule ssl_module>
-        Listen 443
-</IfModule>
-
-<IfModule mod_gnutls.c>
-        Listen 443
-</IfModule>
+<% ports.each do |item| %>
+  Listen <%= @item %>
 <% end %>
