--- a/templates/apache-ports.erb
+++ b/templates/apache-ports.erb
@@ -2,6 +2,6 @@
 # have to change the VirtualHost statement in
 # /etc/apache2/sites-enabled/000-default.conf
 
-<% ports.each do |item| %>
+<% @ports.each do |item| %>
   Listen <%= @item %>
 <% end %>
