HAProxy: fix enable ssl recipe

--- a/templates/apache-ports.erb
+++ b/templates/apache-ports.erb
@@ -3,5 +3,5 @@
 # /etc/apache2/sites-enabled/000-default.conf
 
 <% @ports.each do |item| %>
-  Listen <%= @item %>
+  Listen <%= item %>
 <% end %>
