--- a/templates/haproxy/haproxy.cfg.erb
+++ b/templates/haproxy/haproxy.cfg.erb
@@ -43,7 +43,7 @@ userlist UsersFor_WP
 
 #:::haproxy
 resolvers myresolver
-    nameserver vpc 172.31.0.2:53
+    nameserver vpc <%= node[:haproxy][:resovler] %>
     resolve_retries       30
     timeout retry         1s
     hold valid           10s
