Change all redirects to 301

--- a/templates/haproxy/haproxy.cfg.erb
+++ b/templates/haproxy/haproxy.cfg.erb
@@ -72,7 +72,7 @@ frontend http-in
     <% end %>
     <% if !(node[:haproxy][:redirects].nil? || node[:haproxy][:redirects].empty?)  -%>
     <% node[:haproxy][:redirects].each do |key, value| %>
-    http-request redirect scheme https drop-query append-slash if { path -m str /<%= key %> }
+    http-request redirect scheme https code 301 drop-query append-slash if { path -m str /<%= key %> }
     acl redirect_<%= key %> path_beg /<%= key %>/
     http-request redirect location <%= value %> if redirect_<%= key %>
     <% end %>
@@ -101,7 +101,7 @@ frontend http-in
     <% if !(node[:haproxy][:reverse_proxy].nil? || node[:haproxy][:reverse_proxy].empty?)  -%>
     <% node[:haproxy][:reverse_proxy].each do |key, value| %>
     <% if (value['force_slash'])  -%>
-    http-request redirect scheme https drop-query append-slash if { path -m str /<%= value['slug'] %> }
+    http-request redirect scheme https code 301 drop-query append-slash if { path -m str /<%= value['slug'] %> }
     <% end -%>
     acl prefixed-with-<%= key %>  path_beg /<%= value['slug'] %>/
     use_backend <%= key %> if prefixed-with-<%= key %>
@@ -120,7 +120,7 @@ frontend https-in
     <% end %>
     <% if !(node[:haproxy][:redirects].nil? || node[:haproxy][:redirects].empty?)  -%>
     <% node[:haproxy][:redirects].each do |key, value| %>
-    http-request redirect scheme https drop-query append-slash if { path -m str /<%= key %> }
+    http-request redirect scheme https code 301 drop-query append-slash if { path -m str /<%= key %> }
     acl redirect_<%= key %> path_beg /<%= key %>/
     http-request redirect location /<%= value %>/ if redirect_<%= key %>
     <% end %>
@@ -149,7 +149,7 @@ frontend https-in
     <% if !(node[:haproxy][:reverse_proxy].nil? || node[:haproxy][:reverse_proxy].empty?)  -%>
     <% node[:haproxy][:reverse_proxy].each do |key, value| %>
     <% if (value['force_slash'])  -%>
-    http-request redirect scheme https drop-query append-slash if { path -m str /<%= value['slug'] %> }
+    http-request redirect scheme https code 301 drop-query append-slash if { path -m str /<%= value['slug'] %> }
     <% end -%>
     acl prefixed-with-<%= key %>  path_beg /<%= value['slug'] %>/
     use_backend <%= key %> if prefixed-with-<%= key %>
