--- a/templates/keys.php.erb
+++ b/templates/keys.php.erb
@@ -1,5 +1,5 @@
 <?php
-
+$_SERVER['HTTPS']='on';
 // ** MySQL settings - You can get this info from your web host ** //
 /** The name of the database for WordPress */
 define('DB_NAME', '<%= @database %>');
